--- a/assets/css/custom-popup.css
+++ b/assets/css/custom-popup.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 .modal-content {
   border-radius: 20px !important; /* Rounded corners */
   background-color: #333; /* Dark background */
@@ -32,4 +34,9 @@
 .custom-scale-modal:not(.show) .modal-dialog {
   transform: scale(0.8); /* Slightly smaller on close */
   opacity: 0;
+}
+
+.btn-none {
+  background: none;
+  border: none;
 }
