--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,3 @@
-/* .container {
-  height: 100vh;
-
-  border: 3px solid green;
-  padding: 50% auto;
-}
-.content-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 3px solid blue;
-  height: 100%;
-} */
 @media only screen and (min-width: 768px) {
   /* for desktop */
   .bg {
@@ -27,8 +14,16 @@
     right: 0;
     bottom: 0;
     background-color: rgba(2, 1, 1, 0.445); /* Slight overlay color */
-    backdrop-filter: blur(2px); /* Adjust blur intensity */
+    backdrop-filter: blur(7px); /* Adjust blur intensity */
     z-index: -1; /* Ensure it sits behind the main content */
+  }
+
+  .profile-circle {
+    width: 200px; /* Sesuaikan ukuran */
+    height: 200px; /* Sesuaikan ukuran */
+    border-radius: 50%; /* Membuat bentuk lingkaran */
+    object-fit: cover; /* Memastikan gambar sesuai dengan elemen tanpa distorsi */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   }
 }
 
@@ -40,6 +35,13 @@
     /* background-position: center; */
     /* position: relative; */
   }
+  .profile-circle {
+    width: 200px; /* Sesuaikan ukuran */
+    height: 200px; /* Sesuaikan ukuran */
+    border-radius: 50%; /* Membuat bentuk lingkaran */
+    object-fit: cover; /* Memastikan gambar sesuai dengan elemen tanpa distorsi */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
   .bg::before {
     content: "";
     position: absolute;
@@ -48,7 +50,29 @@
     right: 0;
     bottom: 0;
     background-color: rgba(2, 1, 1, 0.445); /* Slight overlay color */
-    backdrop-filter: blur(2px); /* Adjust blur intensity */
+    backdrop-filter: blur(7px); /* Adjust blur intensity */
     z-index: -1; /* Ensure it sits behind the main content */
   }
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slide-down {
+  animation: slideDown 0.5s ease-out forwards;
+  /* Tambahkan properti tambahan jika diperlukan */
+}
+
+.rounded-notif {
+  border-radius: 25px;
+  opacity: 0.9;
+  background-color: rgb(224, 224, 224);
 }
