--- a/assets/css/custom-popup.css
+++ b/assets/css/custom-popup.css
@@ -1,4 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Fleur+De+Leah&family=Outfit:wght@575&family=Rubik+Mono+One&family=Rubik:wght@300..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Fleur+De+Leah&family=Outfit:wght@575&family=Rubik+Mono+One&family=Rubik:wght@300..900&family=Yellowtail&display=swap");
+.Outfit-575 {
+  font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 780;
+  font-style: normal;
+  letter-spacing: 3px;
+  /* font-size: 40px; */
+  /* line-height: 0.1; */
+}
 
 .modal-content {
   border-radius: 20px !important; /* Rounded corners */
@@ -39,4 +50,11 @@
 .btn-none {
   background: none;
   border: none;
+}
+
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
 }
