--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,13 @@
     object-fit: cover; /* Memastikan gambar sesuai dengan elemen tanpa distorsi */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   }
+  .typing-container {
+    font-family: "Yellowtail", cursive;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 3px;
+    font-size: 50px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -53,6 +60,13 @@
     backdrop-filter: blur(7px); /* Adjust blur intensity */
     z-index: -1; /* Ensure it sits behind the main content */
   }
+  .typing-container {
+    font-family: "Yellowtail", cursive;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 3px;
+    font-size: 30px;
+  }
 }
 
 @keyframes slideDown {
@@ -66,13 +80,52 @@
   }
 }
 
+@keyframes slideDown2 {
+  0% {
+    transform: translateY(-300%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .slide-down {
   animation: slideDown 0.5s ease-out forwards;
   /* Tambahkan properti tambahan jika diperlukan */
 }
 
+.slide-down-1 {
+  animation: slideDown2 1.5s ease-out forwards;
+  /* Tambahkan properti tambahan jika diperlukan */
+}
 .rounded-notif {
   border-radius: 25px;
   opacity: 0.9;
   background-color: rgb(224, 224, 224);
+}
+
+.rounded-custom {
+  border-radius: 25px;
+}
+
+.slide-up {
+  transform: translateY(-100%);
+  opacity: 0;
+}
+
+#halaman_awal {
+  transition: transform 0.5s ease, opacity 0.5s ease;
+}
+.slide-left {
+  position: relative;
+  transform: translateX(100%);
+  opacity: 0;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.slide-left.active {
+  transform: translateX(0);
+  opacity: 1;
 }
