--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,9 @@
     bottom: 0;
     background-color: rgba(2, 1, 1, 0.445); /* Slight overlay color */
     backdrop-filter: blur(7px); /* Adjust blur intensity */
-    background-repeat: no-repeat;
-    background-position: center top;
+    /* background-repeat: no-repeat;
+    background-position: center top; */
+    z-index: -1;
     background-size: cover;
   }
 
@@ -41,7 +42,7 @@
   [class*="bg"] {
     background: url("../img/minion-ptr.jpg");
     background-size: cover;
-    /* z-index: -1; Ensure it sits behind the main content */
+    /* Ensure it sits behind the main content */
     /* background-position: center; */
     /* position: relative; */
   }
@@ -61,9 +62,11 @@
     bottom: 0;
     background-color: rgba(2, 1, 1, 0.445); /* Slight overlay color */
     backdrop-filter: blur(7px); /* Adjust blur intensity */
+    z-index: -1;
     background-repeat: no-repeat;
-    background-position: center top;
+    /* background-position: center top; */
     background-size: cover;
+
     /* pointer-events: none; */
   }
   .typing-container {
